# del-candle

./: .gitignore  Cargo.toml  README.md
examples/: 3dgs.rs  cubic_stylization.rs  optimize_depth_for_trimesh3.rs  test_gpu.rs  voronoi.rs
src/: bvh.rs  cubic_stylization.rs  diffcoord_polyloop2.rs  diffcoord_trimesh3.rs  gaussian_splatting.rs  gd_with_laplacian_reparam.rs  lib.rs  meshtri2_vtxcolor_to_image.rs  perturb_tensor.rs  polygonmesh2_to_areas.rs  polygonmesh2_to_cogs.rs  polyloop2_to_area.rs  polyloop2_to_diffcoord.rs  polyloop_to_edgevector.rs  raycast_trimesh.rs  raycast_trimesh2.rs  render_meshtri2_vtxcolor.rs  render_meshtri3_depth.rs  site2_to_voronoi2.rs  tri2normal.rs  trimesh3_to_tri2nrm.rs  vector_adam.rs  voronoi2.rs  vtx2xyz_to_edgevector.rs
