[package]
name = "del-candle"
version = "0.1.0"
edition = "2021"
description = "differential geometry/rendering for huggingface::candle"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.13"
nalgebra = "0.33.0"
# candle-core = { git = "https://github.com/huggingface/candle.git", features=["cuda"]}
candle-core = "0.6.0" #{ git = "https://github.com/huggingface/candle.git" }
candle-nn = "0.6.0" # { git = "https://github.com/huggingface/candle.git" }
anyhow = "1.0.86"
rand = "0.8.5"
image = "0.25.1"
rayon = "1.10.0"
rand_chacha = "0.3.1"
arrayref = "0.3.8"
#
del-geo-core = "0.1.29"# { path = "../del-geo/del-geo-core"}
del-geo-nalgebra = "0.1.29"#{ path = "../del-geo/del-geo-nalgebra"}
del-msh-core = "0.1.34" #{ path = "../del-msh/del-msh-core"}
del-canvas-core = "0.1.1" # { path = "../del-canvas/del-canvas-core"}
del-ls = "0.1.5" # { path = "../del-ls" }
# del-ls = { path = "../del-ls" }
del-fem-core = "0.1.3" # { path = "../del-fem/del-fem-core"}

#del-geo = "0.1.22"
#del-msh = "0.1.28"
#del-canvas = "0.1.1"

# del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git" }
# del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git" }
# del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }