[package]
name = "del-candle"
version = "0.1.0"
edition = "2021"
description = "differential geometry/rendering for huggingface::candle"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.13"
nalgebra = "0.33.0"
# candle-core = { git = "https://github.com/huggingface/candle.git", features=["cuda"]}
# candle-core = "0.6.0"
# candle-nn = "0.6.0"
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
anyhow = "1.0.86"
rand = "0.8.5"
image = "0.25.1"
rayon = "1.10.0"
rand_chacha = "0.3.1"
arrayref = "0.3.8"
num-traits = "0.2.19"

del-geo-core = { path = "../del-geo/del-geo-core"}
del-geo-nalgebra = { path = "../del-geo/del-geo-nalgebra"}
del-msh-core = { path = "../del-msh/del-msh-core"}
del-msh-nalgebra = { path = "../del-msh/del-msh-nalgebra"}
del-canvas-cpu = { path = "../del-canvas/del-canvas-cpu"}
del-fem-core = { path = "../del-fem/del-fem-core"}
del-fem-ls = { path = "../del-fem/del-fem-ls" }

# del-geo-core = "0.1.32"
# del-geo-nalgebra = "0.1.32"
# del-msh-core = "0.1.36"
# del-canvas-cpu = "0.1.2"
# del-fem-core = "0.1.4"
# del-fem-ls = "0.1.4"

# del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git" }
# del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git" }
# del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }
#del-canvas-cpu = { git = "https://github.com/nobuyuki83/del-canvas.git"}
# del-fem-core = { git = "https://github.com/nobuyuki83/del-fem.git"}
# del-fem-ls = { git = "https://github.com/nobuyuki83/del-fem.git" }